# BikAI-Local-Server

./: .env.example  .gitignore  README.md  cli.py  controller.py  pyproject.toml  requirements.txt  server.py  setup.sh
docs/: README.md  architecture.md  cli.md  controller.md  server.md  setup.md  ui.md
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/pages/: Dashboard.tsx  Logs.tsx  Models.tsx  Nginx.tsx  Playground.tsx  Settings.tsx  Stats.tsx
