[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bikai"
version = "1.0.0"
description = "Bik AI — Local LLM Server CLI by bikiran.com"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
bikai = "cli:cli"

[tool.setuptools]
py-modules = ["cli"]
