[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bikai"
version = "1.0.0"
description = "Bik AI — Local LLM Server CLI by bikiran.com"
requires-python = ">=3.10"
dependencies = [
    # CLI
    "click>=8.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "slowapi>=0.1.9",
    "llama-cpp-python>=0.2.90",
]

[project.scripts]
bikai = "cli:cli"

[tool.setuptools]
py-modules = ["cli"]
